fix: Correct overflow clip for multiselect and enlarge it's input; correct elements type for some register fields

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -74,7 +74,7 @@
 			overflow: clip;
 			overflow-clip-margin: 190px;
 
-			label {
+			label.badge.rounded-pill {
 				position: relative;
 				z-index: 51;
 			}
